# TASK-74

./: metadata.json
.tmp/: audit_report-1-fix_check.md  audit_report-1.md  audit_report-2-fix_check.md  audit_report-2.md  test_coverage_and_readme_audit_report.md
docs/: api-spec.md  design.md  questions.md
repo/: .dockerignore  .gitignore  Cargo.toml  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  run_tests.sh
repo/API_tests/: Cargo.toml
repo/API_tests/src/: helpers.rs  lib.rs  test_auth.rs  test_config.rs  test_connector.rs  test_connector_envelope.rs  test_crud_coverage.rs  test_import_export.rs  test_inventory.rs  test_job_recovery.rs  test_lodgings.rs  test_media.rs  test_metrics_health.rs  test_rbac.rs  test_rent_negotiation.rs  test_resources.rs  test_response_schemas.rs  test_security.rs  test_state_machines.rs  test_user_management.rs
repo/API_tests/src/fixtures/: sample_import.xlsx
repo/backend/: Cargo.toml  Dockerfile  config.toml  diesel.toml
repo/backend/migrations/00000000000000_initial/: down.sql  up.sql
repo/backend/migrations/00000000000001_rent_change_negotiation/: down.sql  up.sql
repo/backend/src/: errors.rs  lib.rs  main.rs
repo/backend/src/api/: auth.rs  config.rs  connector.rs  health.rs  import_export.rs  inventory.rs  lodgings.rs  media.rs  metrics.rs  mod.rs  resources.rs
repo/backend/src/config/: mod.rs
repo/backend/src/crypto/: aes_gcm.rs  argon2id.rs  csrf.rs  hmac_sign.rs  mod.rs  sha256.rs  totp.rs
repo/backend/src/jobs/: mod.rs  runner.rs
repo/backend/src/middleware/: auth_guard.rs  mod.rs  rbac.rs
repo/backend/src/model/: mod.rs
repo/backend/src/repository/: audit.rs  config.rs  connector.rs  export.rs  import_jobs.rs  inventory.rs  lodgings.rs  media.rs  mod.rs  resources.rs  sessions.rs  users.rs
repo/backend/src/schema/: mod.rs
repo/backend/src/service/: audit.rs  auth.rs  connector.rs  import_export.rs  inventory.rs  lodgings.rs  masking.rs  media.rs  mod.rs  mq_connector.rs  resources.rs  validation.rs
repo/db_init/: 01_create_test_db.sql
repo/docs/: design.md
repo/e2e/: Dockerfile  package.json  playwright.config.ts
repo/e2e/tests/: auth.spec.ts  config_center.spec.ts  import_flow.spec.ts  inventory.spec.ts  rent_negotiation.spec.ts  resource_lifecycle.spec.ts  ui_rendering.spec.ts
repo/frontend/: Cargo.toml  Dockerfile  index.html  style.css
repo/frontend/src/: auth.rs  main.rs  router.rs
repo/frontend/src/components/: app.rs  mod.rs  route_guard.rs  sidebar.rs  toast.rs
repo/frontend/src/context/: mod.rs
repo/frontend/src/models/: mod.rs
repo/frontend/src/pages/: configuration.rs  dashboard.rs  forbidden.rs  import_export.rs  inventory.rs  lodgings.rs  login.rs  mod.rs  resources.rs  security_settings.rs
repo/frontend/src/services/: api.rs  mask.rs  mod.rs
repo/frontend_logic/: Cargo.toml
repo/frontend_logic/src/: app_shell.rs  auth.rs  lib.rs  mask.rs  models.rs  routing.rs  sidebar.rs  toast.rs  validation.rs
repo/frontend_tests/: Cargo.toml
repo/frontend_tests/src/: lib.rs  test_auth_context.rs  test_client_validation.rs  test_component_behaviors.rs  test_models_serialization.rs  test_pii_masking.rs  test_route_permissions.rs  test_sidebar_visibility.rs  test_toast_context.rs  test_workflow_scenarios.rs
repo/unit_tests/: Cargo.toml
repo/unit_tests/src/: lib.rs  test_aes_gcm.rs  test_argon2id.rs  test_csrf_sha256.rs  test_deposit_cap.rs  test_export_watermark.rs  test_hmac.rs  test_import_resumable.rs  test_import_validation.rs  test_inventory_logic.rs  test_masking.rs  test_near_expiry.rs  test_night_bounds.rs  test_periods.rs  test_rbac_permissions.rs  test_state_machine.rs  test_totp.rs  test_tz_scheduling.rs  test_validation.rs
