[package]
name = "api_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tourism-backend = { path = "../backend" }
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
diesel = { version = "2", features = ["postgres", "r2d2", "chrono", "serde_json", "numeric"] }
diesel_migrations = "2"
r2d2 = "0.8"
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
