[package]
name = "tourism-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = "0.5"
gloo-timers = "0.3"
gloo-utils = "0.2"
gloo-file = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlVideoElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "Url",
    "DragEvent",
    "DataTransfer",
    "FormData",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Document",
    "Element",
    "MediaQueryList",
    "console",
] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
log = "0.4"
wasm-logger = "0.2"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
