[package]
name = "frontend_logic"
version = "0.1.0"
edition = "2021"

# Pure-Rust shared domain logic for the Yew frontend.
# No WASM or browser dependencies — compiles for native (test runner) and WASM (frontend).
# Both the frontend crate and the frontend_tests crate depend on this library so they
# always exercise the same production code.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
